force-app/main/default/objects/CartAccount__c/fields/ReasonNotAccepted__c.field-meta.xml
<CustomField>
    <fullName>ReasonNotAccepted__c</fullName>
    <description>Campo para operador informar o motivo pelo não aceite da contratação do plano Móvel.</description>
    <label>Motivo não aceite</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OfferType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Cliente corporativo</fullName>
            </value>
            <value>
                <fullName>Cliente Não Aceitou Ouvir a Ofertas</fullName>
            </value>
            <value>
                <fullName>Cliente Recusou - Fidelizado na concorrência</fullName>
            </value>
            <value>
                <fullName>Cliente Recusou - Motivo Financeiro</fullName>
            </value>
            <value>
                <fullName>Cliente Sem Interesse</fullName>
            </value>
            <value>
                <fullName>Ficou de Pensar - Controle</fullName>
            </value>
            <value>
                <fullName>Ficou de Pensar – Pós</fullName>
            </value>
            <value>
                <fullName>Não Ofertado Fidelizado na concorrência</fullName>
            </value>
            <value>
                <fullName>Recusou - Prefere pré-pago</fullName>
            </value>
            <value>
                <fullName>Aceitou outra oferta</fullName>
            </value>
            <value>
                <fullName>Preço - achou caro</fullName>
            </value>
            <value>
                <fullName>Não quis ouvir a oferta</fullName>
            </value>
            <value>
                <fullName>Não é responsável pela decisão</fullName>
            </value>
            <value>
                <fullName>Prefere comprar em outro canal</fullName>
            </value>
            <value>
                <fullName>Está satisfeito com a velocidade atual</fullName>
            </value>
            <value>
                <fullName>Quer pensar melhor sobre a oferta</fullName>
            </value>
            <value>
                <fullName>Erro: sem disponibilidade Fibra</fullName>
            </value>
            <value>
                <fullName>Não vê benefício na oferta</fullName>
            </value>
            <value>
                <fullName>Não quer receber visita técnica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>