force-app/main/default/objects/CartAccount__c/fields/ReferencePoint__c.field-meta.xml
<CustomField>
    <fullName>ReferencePoint__c</fullName>
    <description>Campo para armazenar o ponto de referência do endereço do cliente consultado no SRE.</description>
    <label>Ponto de Referência</label>
    <length>100</length>
    <type>Text</type>
</CustomField>