force-app/main/default/objects/CartAccount__c/fields/RpaId__c.field-meta.xml
<CustomField>
    <fullName>RpaId__c</fullName>
    <description>Campo para armazenar o retorno do ID do registro gerado no RPA quando enviada uma Alta Móvel.</description>
    <label>Id RPA</label>
    <length>15</length>
    <type>Text</type>
</CustomField>