force-app/main/default/objects/CartAccount__c/fields/SecondComplementDescription__c.field-meta.xml
<CustomField>
    <fullName>SecondComplementDescription__c</fullName>
    <description>Campo para armazenar a descrição do complemento 2 do endereço do cliente consultado no SRE.</description>
    <label>Descrição Complemento 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>