force-app/main/default/objects/CartAccount__c/fields/SelectedAction__c.field-meta.xml
<CustomField>
    <fullName>SelectedAction__c</fullName>
    <description>Campo para gravar a ação selecionada na oferta.</description>
    <label>Ação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>