force-app/main/default/objects/CartAccount__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Campo de Status da negociação de Alta Móvel RPA.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RegistrationData</fullName>
                <label>Dados Cadastrais</label>
            </value>
            <value>
                <fullName>Address</fullName>
                <label>Dados de Endereço</label>
            </value>
            <value>
                <fullName>BillingData</fullName>
                <label>Dados Cobrança Faturamento</label>
            </value>
            <value>
                <fullName>SaleData</fullName>
                <label>Dados da Alta</label>
            </value>
            <value>
                <fullName>DeliveryAddress</fullName>
                <label>Endereço de Entrega</label>
            </value>
            <value>
                <fullName>AwaitingAcceptance</fullName>
                <label>Aguardando Aceite</label>
            </value>
            <value>
                <fullName>OfferAccepted</fullName>
                <label>Oferta Aceita</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <label>Cancelado</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>