force-app/main/default/objects/CartAccount__c/fields/StatusRpa__c.field-meta.xml
<CustomField>
    <fullName>StatusRpa__c</fullName>
    <description>Campo para apresentar e armazenar status do RPA.</description>
    <label>Status RPA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NotStarted</fullName>
                <label>Não Iniciado</label>
            </value>
            <value>
                <fullName>InProgress</fullName>
                <label>Em andamento</label>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Concluído</label>
            </value>
            <value>
                <fullName>Error</fullName>
                <label>Com erro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>