force-app/main/default/objects/CartAccount__c/fields/StreetTitle__c.field-meta.xml
<CustomField>
    <fullName>StreetTitle__c</fullName>
    <description>Campo para armazenar o título do logradouro do endereço do cliente consultado no SRE.</description>
    <label>Título do Logradouro</label>
    <length>40</length>
    <type>Text</type>
</CustomField>