force-app/main/default/objects/CartAccount__c/fields/TemporaryNumber__c.field-meta.xml
<CustomField>
    <fullName>TemporaryNumber__c</fullName>
    <description>Campo para armazenar o Número provisório no Next recebido no do response da chamada consultaId do RPA.</description>
    <label>Número Provisório</label>
    <length>100</length>
    <type>Text</type>
</CustomField>