force-app/main/default/objects/CartAccount__c/fields/ThirdComplementDescription__c.field-meta.xml
<CustomField>
    <fullName>ThirdComplementDescription__c</fullName>
    <description>Campo para armazenar a descrição do complemento 3 do endereço do cliente consultado no SRE.</description>
    <label>Descrição Complemento 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>