force-app/main/default/objects/CartAccount__c/fields/UserLogin__c.field-meta.xml
<CustomField>
    <fullName>UserLogin__c</fullName>
    <formula>Owner:User.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login</label>
    <type>Text</type>
</CustomField>