force-app/main/default/objects/CartAccount__c/fields/UserName__c.field-meta.xml
<CustomField>
    <fullName>UserName__c</fullName>
    <formula>CreatedBy.FirstName &amp;&apos; &apos; &amp; CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome Usuário</label>
    <type>Text</type>
</CustomField>