force-app/main/default/objects/CartAccount__c/fields/UserProfile__c.field-meta.xml
<CustomField>
    <fullName>UserProfile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perfil</label>
    <type>Text</type>
</CustomField>