force-app/main/default/objects/CartAccount__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <description>Papel do usuário Salesforce no momento da criação do registro de Carrinho</description>
    <label>Papel do Usuário</label>
    <length>100</length>
    <type>Text</type>
</CustomField>