force-app/main/default/objects/CartAccount__c/recordTypes/NextBestOfferAndAction.recordType-meta.xml
<RecordType>
    <fullName>NextBestOfferAndAction</fullName>
    <active>true</active>
    <description>Ações Recomendadas</description>
    <label>Ações Recomendadas</label>
</RecordType>