force-app/main/default/objects/CartAccount__c/recordTypes/SelectCart.recordType-meta.xml
<RecordType>
    <fullName>SelectCart</fullName>
    <active>true</active>
    <label>Carrinho</label>
</RecordType>