force-app/main/default/objects/CartAccount__c/recordTypes/UpSellMobileTotaled.recordType-meta.xml
<RecordType>
    <fullName>UpSellMobileTotaled</fullName>
    <active>true</active>
    <label>Alta Móvel Totalizado</label>
</RecordType>