force-app/main/default/objects/CartAccount__c/recordTypes/UseIndicator.recordType-meta.xml
<RecordType>
    <fullName>UseIndicator</fullName>
    <active>true</active>
    <label>Utilidade</label>
</RecordType>