force-app/main/default/objects/CartAccount__c/validationRules/CheckBankFields.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBankFields</fullName>
    <active>true</active>
    <description>Validação de preenchimento dos campos referente ao banco quando selecionado método de pagamento Débito automático</description>
    <errorConditionFormula>AND(
        NOT(ISNEW()),
		RecordType.DeveloperName = &quot;UpSellMobileTotaled&quot;,
		ISPICKVAL(PRIORVALUE(Status__c),&apos;BillingData&apos;),
		ISPICKVAL(PaymentMethod__c, &apos;AutomaticDebit&apos;),
		 IF(
			ISPICKVAL(BankCode__c, &apos;104&apos;),
			OR(
			ISBLANK(OwnerAccount__c),
			ISBLANK(TEXT(BankCode__c)),
			ISBLANK(BankAgency__c),
			ISBLANK(BankAccountNumber__c),
			ISBLANK(TEXT(OperationCode__c))),
				IF(
					NOT(ISPICKVAL(BankCode__c, &apos;104&apos;)),
					OR(
					ISBLANK(OwnerAccount__c),
					ISBLANK(TEXT(BankCode__c)),
					ISBLANK(BankAgency__c),
					ISBLANK(BankAccountNumber__c)),
					False
					)
			)
	)</errorConditionFormula>
    <errorMessage>Favor preencher os campos referente ao banco</errorMessage>
</ValidationRule>