force-app/main/default/objects/CartAccount__c/validationRules/CheckBkoFieldsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckBkoFieldsMandatory</fullName>
    <active>true</active>
    <description>Regra para obrigar preenchimento do Motivo Bko e Observação Bko quando editar o registro.</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
RecordType.DeveloperName = &quot;UpSellMobileTotaled&quot;,
$Permission.Backoffice = True,
ISPICKVAL(PRIORVALUE(Status__c),&apos;OfferAccepted&apos;),
ISPICKVAL(PRIORVALUE(StatusRpa__c),&apos;Error&apos;),
					OR(
		ISBLANK(TEXT(BkoReason__c)),
		ISBLANK(BkoNote__c)
		)
)</errorConditionFormula>
    <errorMessage>Favor preencher os campos Motivo Bko e Observações Bko!</errorMessage>
</ValidationRule>