force-app/main/default/objects/CartAccount__c/validationRules/CheckEditionRecordCanceled.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditionRecordCanceled</fullName>
    <active>true</active>
    <description>Regra de validação para não permitir que equipe edite registro de RPA quando status Cancelado.</description>
    <errorConditionFormula>AND(
    AND(
        $Profile.Name &lt;&gt; &quot;Administrador do sistema&quot;,
        $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
        $Profile.Name &lt;&gt; &quot;Administracao&quot;,
		RecordType.DeveloperName = &apos;UpSellMobileTotaled&apos;,
		ISPICKVAL(PRIORVALUE(Status__c),&apos;Canceled&apos;)
    ),
    
    OR(
        ISCHANGED(Status__c),
      		ISCHANGED(ReasonNotAccepted__c),
      		ISCHANGED(MotherName__c),
        ISCHANGED(Birthdate__c),
        ISCHANGED(ContactPhoneNumber__c),
        ISCHANGED(ContactEmail__c),
        ISCHANGED(OptInContactByPhone__c),
        ISCHANGED(Gender__c),
        ISCHANGED(BillingCycle__c),
        ISCHANGED(AccountPostalCode__c),
        ISCHANGED(DeliveryPostalCode__c),
        ISCHANGED(AccountCity__c),
        ISCHANGED(DeliveryCity__c),
        ISCHANGED(AccountAdressType__c),
        ISCHANGED(StreetTitle__c),
        ISCHANGED(AccountStreet__c),
        ISCHANGED(DeliveryStreet__c),
        ISCHANGED(AccountAdressNumber__c),
        ISCHANGED(DeliveryAdressNumber__c),
        ISCHANGED(AccountState__c),
        ISCHANGED(DeliveyState__c),
        ISCHANGED(FirstComplement__c),
        ISCHANGED(SecondComplement__c),
        ISCHANGED(ThirdComplement__c),
        ISCHANGED(FirstComplementDescription__c),
        ISCHANGED(SecondComplementDescription__c),
        ISCHANGED(ThirdComplementDescription__c),
								ISCHANGED(DeliveryFirstComplement__c),
        ISCHANGED(DeliveryComplementDescription__c),
        ISCHANGED(ReferencePoint__c),
        ISCHANGED(PermanentDeliveryMethod__c),
        ISCHANGED(PaymentMethod__c),
        ISCHANGED(OwnerAccount__c),
        ISCHANGED(BankCode__c),
        ISCHANGED(OperationCode__c),
        ISCHANGED(BankAgency__c),
        ISCHANGED(BankAccountNumber__c),
        ISCHANGED(ChipAmount__c),
		      ISCHANGED(BkoReason__c),
								ISCHANGED(TemporaryNumber__c),
								ISCHANGED(OrderNext__c),
								ISCHANGED(RpaId__c),
								ISCHANGED(BkoNote__c)
    )   
)</errorConditionFormula>
    <errorMessage>Não é permitida a alteração dos campos após status Cancelado!</errorMessage>
</ValidationRule>