force-app/main/default/objects/CartAccount__c/validationRules/CheckFieldsMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckFieldsMandatory</fullName>
    <active>true</active>
    <description>Regra para validar preenchimento de campos obrigatórios por Status do registro.</description>
    <errorConditionFormula>AND(
	NOT(ISNEW()),
	RecordType.DeveloperName = &quot;UpSellMobileTotaled&quot;,
	IF(
		AND(
		ISCHANGED(Status__c),
		NOT(ISPICKVAL(Status__c, &quot;Cancelado&quot;))
			),
		IF(
		ISPICKVAL(PRIORVALUE(Status__c),&apos;RegistrationData&apos;),
		OR(
		ISBLANK(MotherName__c),
		ISBLANK(TEXT(Birthdate__c)),
		ISBLANK(ContactPhoneNumber__c),
		ISBLANK(ContactEmail__c),
		ISBLANK(TEXT(Gender__c)),
		ISBLANK(TEXT(BillingCycle__c))),
			IF(
			ISPICKVAL(PRIORVALUE(Status__c),&apos;Address&apos;),
			OR(
			ISBLANK(AccountPostalCode__c),
			ISBLANK(AccountCity__c),
			ISBLANK(AccountAdressType__c),
			ISBLANK(AccountStreet__c),
			ISBLANK(AccountAdressNumber__c),
			ISBLANK(AccountState__c),
			ISBLANK(AccountNeighborhood__c),
			ISBLANK(TEXT(FirstComplement__c)),
			ISBLANK(AccountAdressId__c)),
				IF(
				ISPICKVAL(PRIORVALUE(Status__c),&apos;BillingData&apos;),
				OR(
				ISBLANK(TEXT(PermanentDeliveryMethod__c)),
				ISBLANK(TEXT(PaymentMethod__c))),
				IF(
				ISPICKVAL(PRIORVALUE(Status__c),&apos;SaleData&apos;),
				ISBLANK(TEXT(ChipAmount__c)),
					IF(
					ISPICKVAL(PRIORVALUE(Status__c),&apos;DeliveryAddress&apos;),
					OR(
					ISBLANK(DeliveryPostalCode__c),
					ISBLANK(DeliveryCity__c),
					ISBLANK(DeliveryStreet__c),
					ISBLANK(DeliveryAdressNumber__c),
					ISBLANK(DeliveyState__c),
					ISBLANK(DeliveryNeighborhood__c)),
			False
)
)
)
)
),
False
)
)</errorConditionFormula>
    <errorMessage>Favor preencher os campos do formulário abaixo para seguir!</errorMessage>
</ValidationRule>