force-app/main/default/objects/CartAccount__c/validationRules/CheckPhoneNumberContact.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckPhoneNumberContact</fullName>
    <active>true</active>
    <description>Regra para validar que o número de telefone contenha 11 caracteres.</description>
    <errorConditionFormula>AND
(
RecordType.DeveloperName = &quot;UpSellMobileTotaled&quot;,		
ISPICKVAL(PRIORVALUE(Status__c),&apos;RegistrationData&apos;),
	NOT(ISNEW()),
	(LEN( ContactPhoneNumber__c ) != 11)
				)</errorConditionFormula>
    <errorDisplayField>ContactPhoneNumber__c</errorDisplayField>
    <errorMessage>O telefone do contato deve conter 11 digítos.</errorMessage>
</ValidationRule>