force-app/main/default/objects/CartAccount__c/validationRules/CheckStatusOfferAccepted.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckStatusOfferAccepted</fullName>
    <active>false</active>
    <description>Regra para não permitir atualizar o Status para Oferta Aceita manualmente.</description>
    <errorConditionFormula>AND(
	NOT(ISNEW()),
	RecordType.DeveloperName = &quot;UpSellMobileTotaled&quot;,
	ISCHANGED(Status__c),
	TEXT(Status__c) = &apos;OfferAccepted&apos;,
TEXT(Accepted__c) = &apos;NotAccepted&apos;
				
	)</errorConditionFormula>
    <errorMessage>Não é permitida a alteração do status para Oferta Aceita sem finalizar o fluxo!</errorMessage>
</ValidationRule>