force-app/main/default/objects/CartAccount__c/validationRules/DoNotContainSpecialCharacters.validationRule-meta.xml
<ValidationRule>
    <fullName>DoNotContainSpecialCharacters</fullName>
    <active>true</active>
    <description>Identificador para não conter caracteres especiais</description>
    <errorConditionFormula>NOT( 
OR( 
ISBLANK(ReferencePoint__c),REGEX(ReferencePoint__c,&quot;([a-zA-Z- ])*&quot;)))</errorConditionFormula>
    <errorDisplayField>ReferencePoint__c</errorDisplayField>
    <errorMessage>O campo não pode conter caracteres especiais</errorMessage>
</ValidationRule>