force-app/main/default/objects/CartAccount__c/validationRules/ParametersForTheField.validationRule-meta.xml
<ValidationRule>
    <fullName>ParametersForTheField</fullName>
    <active>true</active>
    <description>Identifica o campo para conter apenas número e letras</description>
    <errorConditionFormula>NOT( 
OR( 
ISBLANK(OrderNext__c),REGEX(OrderNext__c,&quot;([a-zA-Z0-9])*&quot;)))</errorConditionFormula>
    <errorDisplayField>OrderNext__c</errorDisplayField>
    <errorMessage>erro</errorMessage>
</ValidationRule>