force-app/main/default/objects/CartAccount__c/listViews/Cart.listView-meta.xml
<ListView>
    <fullName>Cart</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>AccountDocument__c</columns>
    <columns>TotalPrice__c</columns>
    <columns>Discount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CartAccount__c.SelectCart</value>
    </filters>
    <label>Carrinho</label>
</ListView>