force-app/main/default/objects/CartAccount__c/listViews/OfferAccountError.listView-meta.xml
<ListView>
    <fullName>OfferAccountError</fullName>
    <columns>NAME</columns>
    <columns>AccountDocument__c</columns>
    <columns>CustomerSegment__c</columns>
    <columns>Status__c</columns>
    <columns>StatusRpa__c</columns>
    <columns>Reason__c</columns>
    <columns>BkoReason__c</columns>
    <columns>BkoNote__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StatusRpa__c</field>
        <operation>equals</operation>
        <value>InProgress,Error</value>
    </filters>
    <filters>
        <field>BkoReason__c</field>
        <operation>equals</operation>
    </filters>
    <label>Ofertas Oferecidas com Erro</label>
</ListView>